Changed some error response codes
